# driftwatch

./: .env.example  .gitignore  .venv  ANALYSIS.md  BENCHMARKS.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_REVIEW.md  PLAN.md  README.md  SECURITY.md  VALIDATION.md  alembic.ini  docker-compose.yml  driftwatch.db  pyproject.toml  sbom.json
.github/workflows/: ci.yml
alembic/: env.py
benchmarks/: bench_api.py
docs/: api-reference.md  deployment.md  use-cases.md
src/driftwatch/: __init__.py  app.py  auth.py  cli.py  collectors.py  config.py  db.py  drift.py  models.py  schemas.py
src/driftwatch/routes/: auth.py  health.py  snapshots.py
tests/: conftest.py  test_app.py  test_cli.py  test_collectors.py  test_config.py  test_database.py  test_drift.py  test_integration.py  test_models.py
