[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftwatch"
version = "0.1.0"
description = "Infrastructure drift detector. Snapshots Docker configs, crontabs, firewall rules, and package versions. Alerts via Signal when anything changes unexpectedly. Stores baselines in SQLite, diffs on schedule."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
    "pydantic[email]>=2.0",
]

[project.scripts]
driftwatch = "driftwatch.app:create_app"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "httpx", "ruff", "mypy", "bandit", "aiosqlite"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF", "S", "ARG"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "ARG"]
"alembic/**" = ["INP001"]
"src/**/routes/**" = ["B008"]
"src/**/auth.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
