[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftwatch"
version = "0.2.0"
description = "Infrastructure drift detector. Snapshots Docker containers, crontabs, packages, and systemd services. Compares snapshots to detect configuration drift."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
dependencies = [
    "click>=8.1",
]

[project.scripts]
driftwatch = "driftwatch.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
